# bff-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  cut-tag.yml  integration-tests.yml
.platform/kubernetes/base/: application.yaml
.platform/kubernetes/stg/: application_patch.yaml
bff-service-api/: pyproject.toml
bff-service-api/src/ybor/: __init__.py
bff-service-api/src/ybor/faq/bff/service/api/: __init__.py  example_service.py
bff-service-client/: pyproject.toml
bff-service-client/src/ybor/faq/bff/service/client/: example_service_client.py
bff-service-core/: pyproject.toml
bff-service-core/src/ybor/faq/bff/: __init__.py
bff-service-core/src/ybor/faq/bff/service/core/: example_service_core.py
bff-service-integration-tests/: pyproject.toml
bff-service-integration-tests/tests/integration/: test_rest_connectivity.py
bff-service-integration-tests/tests/unit/: test_example_service_core.py
bff-service-integration-tests/tests/utils/: fixtures.py  rest_test_utils.py
bff-service-persistence/: alembic.ini  pyproject.toml
bff-service-persistence/alembic/: env.py
bff-service-persistence/alembic/versions/: 001_initial_database_schema.py
bff-service-persistence/src/ybor/faq/bff/service/persistence/: __init__.py
bff-service-persistence/src/ybor/faq/bff/service/persistence/entities/: __init__.py  bff_entity.py
bff-service-persistence/src/ybor/faq/bff/service/persistence/repositories/: __init__.py  bff_repository.py
bff-service-server/: pyproject.toml
bff-service-server/src/ybor/faq/bff/service/server/: __init__.py  app.py  main.py
bff-service-server/src/ybor/faq/bff/service/server/config/: settings.py
bff-service-server/src/ybor/faq/bff/service/server/middleware/: __init__.py  auth.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: rest-service.json
scripts/: benchmark.py  init-db.sql  run-integration-tests.sh  run-server-ephemeral.sh  run-tests.sh  setup-dev.sh  start-dev.sh  validate_templates.py
